Fix the installation commands.

--- a/CIMPA_school/notebooks/Worksheet1.ipynb
+++ b/CIMPA_school/notebooks/Worksheet1.ipynb
@@ -8,7 +8,7 @@
     "# Installing and starting Oscar\n",
     "\n",
     "First, you need to install the (compiler for) `julia`. For that, follow the installation \n",
-    "instructions on the OSCAR website (www.oscar.computeralgebra.de) and make sure you \n",
+    "instructions on the OSCAR website (https://oscar.computeralgebra.de) and make sure you \n",
     "install the latest julia version. \n",
     "\n",
     "Usually, you would then proceed to follow the installation instructions for \n",
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "using Pkg\n",
-    "] add \"https://github.com/HechtiDerLachs/Oscar.jl#CIMPA_school\" #This will take some time "
+    "]add https://github.com/HechtiDerLachs/Oscar.jl#CIMPA_school"
    ]
   },
   {
