Update worksheets and exercises.

--- a/CIMPA_school/notebooks/Worksheet2.ipynb
+++ b/CIMPA_school/notebooks/Worksheet2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "blank-premiere",
+   "id": "statistical-approach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "christian-spank",
+   "id": "refined-reporter",
    "metadata": {},
    "source": [
     "# Worksheet 2: Dimension, multiplicities, etc.\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "located-hampshire",
+   "id": "limiting-english",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wrapped-killing",
+   "id": "potential-patio",
    "metadata": {},
    "source": [
     "With the following command we create a *local* ordering on the variables of $R$."
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "guided-albuquerque",
+   "id": "compact-building",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "optional-pocket",
+   "id": "departmental-month",
    "metadata": {},
    "source": [
     "We can use this to produce a *standard basis* of the ideal $I$ for this ordering. "
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "european-workshop",
+   "id": "animated-defensive",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "necessary-surgeon",
+   "id": "previous-library",
    "metadata": {},
    "source": [
     "For a given ordering, we can also ask for the *leading ideal* of $I$ which is simply the ideal generated \n",
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "developmental-judges",
+   "id": "imposed-print",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mature-webster",
+   "id": "allied-penny",
    "metadata": {},
    "source": [
     "By construction, the leading ideal is a *homogeneous* ideal for this ordering. We can pass to the graded quotient ring for this ideal and compute the Hilbert polynomial."
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stretch-reserve",
+   "id": "brutal-violation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sapphire-wheel",
+   "id": "documentary-series",
+   "metadata": {},
+   "source": [
+    "We must remark that here we computed the Hilbert *polynomial* $P(t)$ of $A := R_{\\mathrm gr}/ I_{\\mathrm gr}$. It is the unique polynomial \n",
+    "such that for $k \\gg 1$, $k \\in \\mathbb N$ one has $P(k) = \\dim_{\\mathbb C} A_k$ with $A_k$ the $k$-th \n",
+    "graded piece of the algebra $A$. \n",
+    "\n",
+    "The Hilbert-Samuel polynomial, on the other hand, is the unique polynomial $Q(t)$ such that for $k \\gg 1$, $k \\in \\mathbb N$ one has $Q(k) = \\dim_{\\mathbb C} A / \\mathfrak m^k$. \n",
+    "\n",
+    "Since $A / \\mathfrak m^k \\cong A_0 \\oplus A_1 \\oplus \\dots \\oplus A_{k-2} \\oplus A_{k-1}$ as vector spaces, \n",
+    "it is easy to see that $Q(k) = P(k-1) - P(k-2)$ and $P(k) = \\sum_{i=0}^{k-1} P(i)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "severe-following",
    "metadata": {},
    "source": [
     "Note that the Hilbert polynomial comes with a new variable in a new ring."
@@ -124,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gothic-granny",
+   "id": "reverse-receiver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pregnant-fellowship",
+   "id": "organic-assets",
    "metadata": {},
    "source": [
     "Also the Hilbert series is available "
@@ -142,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ordered-awareness",
+   "id": "different-thong",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confident-gossip",
+   "id": "grand-diamond",
    "metadata": {},
    "source": [
     "Accessing the coefficients of the Hilbert polynomial is rather tedious. The reason is that \n",
@@ -161,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "focused-jumping",
+   "id": "female-leeds",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naughty-mother",
+   "id": "incomplete-mumbai",
    "metadata": {},
    "source": [
     "How can we use such iterators? Well, we can, for example, iterate over them in `for`-loops."
@@ -179,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "employed-observation",
+   "id": "provincial-macintosh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "competent-terminology",
+   "id": "eleven-cowboy",
    "metadata": {},
    "source": [
     "If we do not care about such features and only want everything in a list, we can just feed the iterator to `collect`."
@@ -199,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "requested-manufacturer",
+   "id": "laden-plumbing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "established-benjamin",
+   "id": "grave-eleven",
    "metadata": {},
    "source": [
     "Or just take any other shortcut to the information of interest:"
@@ -217,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accepting-stranger",
+   "id": "negative-quantity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sufficient-elephant",
+   "id": "comparable-imaging",
    "metadata": {},
    "source": [
     "## The Milnor number\n",
@@ -237,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fresh-happening",
+   "id": "challenging-burst",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "express-monster",
+   "id": "wicked-gibraltar",
    "metadata": {},
    "source": [
     "We can implement the functionality from the lecture in various functions."
@@ -256,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "seasonal-affiliate",
+   "id": "flush-emperor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wanted-spending",
+   "id": "forbidden-induction",
    "metadata": {},
    "source": [
     "Note that we used a rather involved method as a black box: `singular_vdim`."
@@ -278,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "neutral-wayne",
+   "id": "printable-faculty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resident-belarus",
+   "id": "decreased-junior",
    "metadata": {},
    "source": [
     "So what is happening there under the hood? \n",
@@ -299,19 +314,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exterior-engine",
+   "id": "material-bench",
    "metadata": {},
    "outputs": [],
    "source": [
     "R = parent(f)\n",
     "J = ideal(R, minors(jacobi_matrix(f), 1))\n",
     "o = degrevlex(gens(R))\n",
-    "leading_ideal(J, ordering=o)"
+    "leadJ = leading_ideal(J, ordering=o)\n",
+    "singular_vdim(leadJ)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "coordinated-expense",
+   "id": "forced-linux",
    "metadata": {},
    "source": [
     "The above is the *global* milnor number. If we are only interested in singularities \n",
@@ -321,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "governing-bench",
+   "id": "ultimate-guarantee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hired-underwear",
+   "id": "express-worship",
    "metadata": {},
    "source": [
     "We see that the singularity at the origin has Milnor number $1$ instead of the global Milnor number $4$. \n",
@@ -343,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spoken-florida",
+   "id": "romantic-enzyme",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "together-ordinance",
+   "id": "sporting-vitamin",
    "metadata": {},
    "source": [
     "Similarly, we could do the same at any other rational point $p \\in \\mathbf A^2$, for instance at the other singular points $(0, 1)$ or $(1, 0)$ of $f$. To this end, we have to apply an isomorphism $\\varphi \\colon R \\to R$ that takes $p$ to the origin, translate the ideal along $\\varphi$ and repeat the computations for the local ordering. \n",
@@ -362,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "judicial-audio",
+   "id": "coordinate-better",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coral-spotlight",
+   "id": "conceptual-budget",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "biblical-press",
+   "id": "anticipated-partition",
    "metadata": {},
    "source": [
     "Note that `shifted_ideal` returns an ideal in the original polynomial ring $R$ and not in the localization $L$!"
@@ -393,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adopted-original",
+   "id": "three-designation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stretch-angle",
+   "id": "literary-explanation",
    "metadata": {},
    "source": [
     "## The Tjurina number\n",
@@ -415,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cognitive-month",
+   "id": "rough-breast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,12 +439,12 @@
     "f0 = x^5 + y^5\n",
     "J0 = ideal(R, f0) + ideal(R, minors(jacobi_matrix(f0), 1))\n",
     "singular_vdim_local(J0)\n",
-    "# milnor_number(f0)"
+    "# milnor_number(f0) # run for comparison"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "pending-census",
+   "id": "gothic-bulgarian",
    "metadata": {},
    "source": [
     "Note that this is equal to the Milnor number of $f$. This is due to the fact that $f$ is *quasi-homogeneous*. If the function does not have this property, the Milnor and Tjurina number can differ:"
@@ -437,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "impossible-consumer",
+   "id": "immediate-scheme",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "operating-optimum",
+   "id": "surrounded-controversy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "integrated-advantage",
+   "id": "transparent-triple",
    "metadata": {},
    "source": [
     "What a difference! But wait -- did the Milnor number really jump up that much compared to $f_0$? Somehow, it did, but *globally* and not at the origin!"
@@ -469,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "effective-louisville",
+   "id": "exclusive-happening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caring-transformation",
+   "id": "shaped-reggae",
    "metadata": {},
    "source": [
     "Still, we see a difference of $1$ between these two numbers."
@@ -487,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "magnetic-payment",
+   "id": "possible-validity",
    "metadata": {},
    "source": [
     "## Milnor numbers of ICIS and the Le-Greuel formula\n",
@@ -500,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "isolated-pension",
+   "id": "offensive-effectiveness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impossible-basket",
+   "id": "unlimited-israeli",
    "metadata": {},
    "source": [
     "Let us compute the Milnor number(s) for the $S_5$ singularity."
@@ -518,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chinese-flash",
+   "id": "monthly-accountability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wicked-check",
+   "id": "heated-miami",
    "metadata": {},
    "source": [
     "Next, we need to construct the isolated hypersurface singularity\n",
@@ -541,18 +557,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interracial-allergy",
+   "id": "lucky-lucas",
    "metadata": {},
    "outputs": [],
    "source": [
     "a = [rand(QQ, -100:100) for i in 1:2]\n",
     "h = sum([c*g for (c, g) in zip(a, gens(I))])\n",
-    "I1 = ideal(R, h)"
+    "I1 = ideal(R, h)\n",
+    "issubset(I1, I)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "palestinian-invention",
+   "id": "protected-battle",
    "metadata": {},
    "source": [
     "Let us verify that this is indeed an isolated hypersurface singularity."
@@ -561,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "distributed-helping",
+   "id": "genuine-waste",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advised-worst",
+   "id": "parliamentary-ethnic",
    "metadata": {},
    "source": [
     "If we want to know more about the singularity at the origin, we may ask OSCAR (or more precisely SINGULAR in the background) to classify it."
@@ -580,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proper-college",
+   "id": "integrated-cricket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "outdoor-filter",
+   "id": "historic-selling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "racial-surgeon",
+   "id": "indian-nitrogen",
    "metadata": {},
    "source": [
     "Now comes the truely determinantal part of the formula."
@@ -608,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "worldwide-employer",
+   "id": "sorted-airplane",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "color-publication",
+   "id": "virgin-cambodia",
    "metadata": {},
    "source": [
     "Hence, the total Milnor number is $\\mu(S_5) = \\mu_0 - \\mu_1 = 6 - 1 = 5$."
@@ -627,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worst-telling",
+   "id": "minute-cookie",
    "metadata": {},
    "source": [
     "## Deformations of complete intersections\n",
@@ -638,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "decent-consequence",
+   "id": "handed-headset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hydraulic-puzzle",
+   "id": "every-lodge",
    "metadata": {},
    "source": [
     "The normal module is defined as $N = \\mathrm{Hom}_R(I, R/I)$. OSCAR knows how to handle `Hom`-modules, \n",
@@ -658,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lonely-sussex",
+   "id": "strategic-worth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sticky-ecology",
+   "id": "threaded-brook",
    "metadata": {},
    "source": [
     "The last command is a bit subtle. It returns a pair `(N, vec_to_hom)` consisting of the actual \n",
@@ -686,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chinese-throat",
+   "id": "residential-symphony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mineral-manhattan",
+   "id": "progressive-announcement",
    "metadata": {},
    "source": [
     "We can try to apply `v` to an element of `Imod` directly, but this will fail."
@@ -705,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "equal-requirement",
+   "id": "assigned-intensity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opposite-fifth",
+   "id": "conditional-death",
    "metadata": {},
    "source": [
     "Converting `v` into a homomorphism makes everything work."
@@ -724,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wicked-causing",
+   "id": "authorized-momentum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dominant-excerpt",
+   "id": "hungry-survival",
    "metadata": {},
    "source": [
     "We proceed with the construction of the $T^1(S_5)$. We need to divide by the image of the jacobian matrix."
@@ -744,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "competitive-window",
+   "id": "involved-commissioner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "instant-throw",
+   "id": "executed-victor",
    "metadata": {},
    "source": [
     "Now we need the complicated map \n",
@@ -766,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "formal-stick",
+   "id": "professional-toddler",
    "metadata": {},
    "outputs": [],
    "source": [
