--- a/CIMPA_school/notebooks/Exercise_sheet_1.ipynb
+++ b/CIMPA_school/notebooks/Exercise_sheet_1.ipynb
@@ -79,6 +79,30 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "metallic-administrator",
+   "metadata": {},
+   "source": [
+    "### Exercise 4:\n",
+    "\n",
+    "A mystery ideal. Consider the ideal \n",
+    "\n",
+    "$I = \\langle x^7*y + 3*x^5*y^3 - 3*x^5*y + 3*x^3*y^5 - 6*x^3*y^3 + 3*x^3*y + x*y^7 - 3*x*y^5 + 3*x*y^3 - x*y*z^2 - x*y\n",
+    " x^9 + 3*x^7*y^2 - x^7*z^3 + 3*x^7*z^2 - 3*x^7*z - 2*x^7 + 3*x^5*y^4 - 3*x^5*y^2*z^3 + 9*x^5*y^2*z^2 - 9*x^5*y^2*z - 3*x^5*y^2 + 3*x^5*z^3 - 9*x^5*z^2 + 9*x^5*z + x^3*y^6 - 3*x^3*y^4*z^3 + 9*x^3*y^4*z^2 - 9*x^3*y^4*z + 6*x^3*y^2*z^3 - 18*x^3*y^2*z^2 + 18*x^3*y^2*z - 3*x^3*y^2 - 3*x^3*z^3 + 8*x^3*z^2 - 9*x^3*z + 2*x^3 - x*y^6*z^3 + 3*x*y^6*z^2 - 3*x*y^6*z + x*y^6 + 3*x*y^4*z^3 - 9*x*y^4*z^2 + 9*x*y^4*z - 3*x*y^4 - 3*x*y^2*z^3 + 9*x*y^2*z^2 - 9*x*y^2*z + 3*x*y^2 + x*z^5 - 3*x*z^4 + 4*x*z^3 - 4*x*z^2 + 3*x*z - x\n",
+    " x^6*y^2 + 3*x^4*y^4 - 3*x^4*y^2 + 3*x^2*y^6 - 6*x^2*y^4 + 3*x^2*y^2 + y^8 - 3*y^6 + 3*y^4 - y^2*z^2 - y^2\n",
+    " x^8*y + 3*x^6*y^3 - x^6*y*z^3 + 3*x^6*y*z^2 - 3*x^6*y*z - 2*x^6*y + 3*x^4*y^5 - 3*x^4*y^3*z^3 + 9*x^4*y^3*z^2 - 9*x^4*y^3*z - 3*x^4*y^3 + 3*x^4*y*z^3 - 9*x^4*y*z^2 + 9*x^4*y*z + x^2*y^7 - 3*x^2*y^5*z^3 + 9*x^2*y^5*z^2 - 9*x^2*y^5*z + 6*x^2*y^3*z^3 - 18*x^2*y^3*z^2 + 18*x^2*y^3*z - 3*x^2*y^3 - 3*x^2*y*z^3 + 8*x^2*y*z^2 - 9*x^2*y*z + 2*x^2*y - y^7*z^3 + 3*y^7*z^2 - 3*y^7*z + y^7 + 3*y^5*z^3 - 9*y^5*z^2 + 9*y^5*z - 3*y^5 - 3*y^3*z^3 + 9*y^3*z^2 - 9*y^3*z + 3*y^3 + y*z^5 - 3*y*z^4 + 4*y*z^3 - 4*y*z^2 + 3*y*z - y\\rangle$ \n",
+    " \n",
+    "in the ring $R = \\mathbb Q[x,y,z]$. \n",
+    "What can you say about the geometry of the variety $X = V(I)$?\n",
+    "\n",
+    " * What is the dimension of $X$? Is it equidimensional? \n",
+    " * What is the singular locus of $X$? \n",
+    " * Which singularities are singularities of components of $X$ and which singularities are due to intersections of components?\n",
+    " * for the isolated singularities of $X$: Can you compute the multiplicities and the Milnor numbers?\n",
+    " * Can you do the same for the isolated singularities of the components?"
+   ]
   }
  ],
  "metadata": {
