Update the second exercise sheet.

--- a/CIMPA_school/notebooks/Exercises2.ipynb
+++ b/CIMPA_school/notebooks/Exercises2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "large-sarah",
+   "id": "stopped-cartridge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "finished-review",
+   "id": "sensitive-screw",
    "metadata": {},
    "source": [
     "## Exercise 1: Normalization and how it can be used\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infrared-inspiration",
+   "id": "processed-coalition",
    "metadata": {},
    "source": [
     "## Exercise 2: Finite determinacy\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prompt-arrival",
+   "id": "casual-tribe",
    "metadata": {},
    "source": [
     "## Exercise 3: Versal deformations for IHS\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vocational-utility",
+   "id": "comic-feature",
    "metadata": {},
    "source": [
     "## Exercise 4: Versal deformations of ICIS\n",
@@ -76,10 +76,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "experimental-affairs",
+   "id": "thermal-wagon",
    "metadata": {},
    "source": [
-    "## Exercise 5: GL-equivalence and unfoldings of matrices\n",
+    "## Exercise 5 (*): GL-equivalence and unfoldings of matrices\n",
     "\n",
     "Recall the notions of GL-equivalence for $m\\times n$-matrices from the lectures by Prof. Maria Ruas: \n",
     "\n",
@@ -88,6 +88,24 @@
     " * Write a function which computes the extended tangent space of a given matrix $A$ for GL-equivalence. \n",
     " * Write a function that returns the semi-universal unfolding for GL-equivalence for a given matrix.\n",
     " * Can you compute the discriminants in some examples?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "improving-abortion",
+   "metadata": {},
+   "source": [
+    "## Exercise 6 (*): Bifurcation\n",
+    "\n",
+    "Recall the question by Juan Nuno-Ballesteros from the last lecture. \n",
+    "\n",
+    "Let $F: (\\mathbb C^n,0) \\times (\\mathbb C^k,0) \\to (\\mathbb C,0)$ be the unfolding of a map germ $f \\colon (\\mathbb C^n,0) \\to (\\mathbb C,0)$. We write $f_t$ for the function $F(-;t)$.  The \n",
+    "*bifurcation set* $B \\subset \\mathbb C^k$ is defined as \n",
+    "the set of parameters $t \\in \\mathbb C^k$ for which $f_t$ either has a non-Morse critical point or at least two critical points with the same image.\n",
+    "\n",
+    " * Write a program to compute the equations for the bifurcation set.\n",
+    "\n",
+    "(*) hard exercise!"
    ]
   }
  ],
