Update Worksheet 4 to after the lecture.

--- a/CIMPA_school/notebooks/Worksheet4.ipynb
+++ b/CIMPA_school/notebooks/Worksheet4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rocky-semester",
+   "id": "serious-small",
    "metadata": {
     "scrolled": false
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "single-afghanistan",
+   "id": "dressed-captain",
    "metadata": {},
    "source": [
     "# Worksheet 4: Deformations of IHS, ICIS, and beyond"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "animal-sight",
+   "id": "perfect-apartment",
    "metadata": {},
    "source": [
     "## Versal deformations of isolated hypersurface singularities\n",
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "infinite-animation",
+   "id": "electoral-desire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "younger-finding",
+   "id": "thousand-terry",
    "metadata": {},
    "source": [
     "Now we can manually gather those monomials in the monomial diagram which are not in the leading ideal \n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "heated-rental",
+   "id": "medieval-convertible",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medieval-billion",
+   "id": "reasonable-friend",
    "metadata": {},
    "source": [
     "Does it reproduce the same result? Let's check."
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "equivalent-preparation",
+   "id": "alien-needle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "robust-richmond",
+   "id": "russian-shoulder",
    "metadata": {},
    "source": [
     "We can now write down a semi-universal unfolding of $f$. First, we need to introduce new \n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "honey-coating",
+   "id": "ancient-front",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "multiple-being",
+   "id": "brazilian-gauge",
    "metadata": {},
    "source": [
     "Let us check that it gives the expected result."
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cardiac-pierce",
+   "id": "vulnerable-fantasy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "anonymous-kentucky",
+   "id": "behind-departure",
    "metadata": {},
    "source": [
     "## The discriminant of an IHS"
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "olive-helping",
+   "id": "amateur-exercise",
    "metadata": {},
    "source": [
     "Let $F(x; t) \\colon (\\mathbb C^n, 0) \\times (\\mathbb C^\\mu,0) \\to (\\mathbb C,0)$ be the semi-universal unfolding \n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "posted-skiing",
+   "id": "terminal-carrier",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "professional-pacific",
+   "id": "rough-debut",
    "metadata": {},
    "source": [
     "Having the above method, we can manually compute the equation for the discriminant $\\Delta$ using elimination \n",
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "narrow-windsor",
+   "id": "reduced-context",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dirty-arabic",
+   "id": "august-fleece",
    "metadata": {},
    "source": [
     "The specialists among us may recognize that this is indeed the formula for the discriminant \n",
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amino-journal",
+   "id": "original-yukon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beautiful-paintball",
+   "id": "prospective-conclusion",
    "metadata": {},
    "source": [
     "What a mess! But luckily, we already picked out some special points on $\\Delta$ for you; \n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "secret-pocket",
+   "id": "located-philosophy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bronze-precipitation",
+   "id": "decimal-terminal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "assumed-stroke",
+   "id": "cathedral-argument",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wrapped-transsexual",
+   "id": "prompt-country",
    "metadata": {},
    "source": [
     "Let us analyze the singularities in the fibers for either one of the three parameters. First $t_1$:"
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pressed-gates",
+   "id": "brief-circuit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chicken-profile",
+   "id": "satisfied-asian",
    "metadata": {},
    "source": [
     "So $f_1 = F(x,y,z; t_1)$ has an isolated singularity at the origin. Which one is it?"
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "equal-diagnosis",
+   "id": "studied-shelter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "combined-gardening",
+   "id": "molecular-modem",
    "metadata": {},
    "source": [
     "In fact, the whole regular stratum of $\\Delta$ is characterized by the fibers having one single $A_1$-singularity.\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strange-georgia",
+   "id": "toxic-subcommittee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acceptable-maximum",
+   "id": "planned-navigator",
    "metadata": {},
    "source": [
     "The `classify` command can only analyze singularities at the origin (because it is using local orderings in the background) and, hence, we first have to shift our function."
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "naval-attendance",
+   "id": "surgical-seven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "criminal-tucson",
+   "id": "sweet-andrew",
    "metadata": {},
    "source": [
     "So we see that on this stratum of $\\Delta$ the fibers have precisely one $A_2$ singularity."
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "large-tracy",
+   "id": "quantitative-island",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resistant-skill",
+   "id": "liquid-skill",
    "metadata": {},
    "source": [
     "Here, we have two singularities and therefore need two shifts."
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "split-reynolds",
+   "id": "marked-twenty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "defensive-southeast",
+   "id": "parental-delivery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handled-daisy",
+   "id": "prescribed-contribution",
    "metadata": {},
    "source": [
     "We conclude that on the third stratum, the fibers have two singularities of type $A_1$."
@@ -474,13 +474,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "printable-secret",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "F = FreeMod(R, 5)\n",
+    "F[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "strategic-worth",
    "metadata": {},
    "outputs": [],
    "source": [
     "F1 = FreeMod(R, 1) # A free module over R of rank 1\n",
     "Imod, _ = sub(F1, [g*F1[1] for g in gens(I)]) # the submodule of F1 generated by I\n",
-    "RmodI, _ = quo(F1, Imod) # the quotient by that submodule\n",
+    "RmodI, _ = quo(F1, Imod) # the quotient by that submodule"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "heard-confidentiality",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RmodI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bibliographic-drilling",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "N, vec_to_hom = hom(Imod, RmodI)"
    ]
   },
@@ -506,7 +536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v = N[1] # the first generator of N\n",
+    "v = x*N[1] # the first generator of N\n",
     "typeof(v)"
    ]
   },
@@ -546,7 +576,7 @@
    "source": [
     "phi = vec_to_hom(v)\n",
     "@show phi\n",
-    "phi(Imod[2])"
+    "phi(g)"
    ]
   },
   {
@@ -595,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "refined-kingston",
+   "id": "boolean-scoop",
    "metadata": {},
    "source": [
     "## Versal deformations of arbitrary isolated singularities\n",
@@ -608,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tough-banana",
+   "id": "thermal-preference",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,17 +649,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "referenced-bible",
+   "id": "present-function",
    "metadata": {},
    "outputs": [],
    "source": [
-    "I = ideal(R, minors(M1, 2))\n",
+    "I = ideal(R, minors(M1, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "numerous-michael",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "inc, p = versal_unfolding(I)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "impossible-favorite",
+   "id": "thermal-glenn",
    "metadata": {},
    "source": [
     "Apart from the verbose Singular output during the computation, this returns us a pair of two maps: the inclusion of \n",
@@ -640,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hispanic-interstate",
+   "id": "tough-solid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tired-controversy",
+   "id": "athletic-mercury",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "impressed-satisfaction",
+   "id": "premier-alarm",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,10 +709,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "biblical-lease",
+   "id": "dependent-geometry",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "primary_decomposition(modulus(OO(codomain(p))))"
+   ]
   }
  ],
  "metadata": {
